# concrete-haskell

./: .dockerignore  .gitignore  Dockerfile  README.md  concrete-haskell.cabal  generate_source.sh  package.yaml  stack.yaml
src/: Access_Consts.hs  Access_Types.hs  ActiveLearnerClientService.hs  ActiveLearnerClientService_Client.hs  ActiveLearnerClientService_Iface.hs  ActiveLearnerServerService.hs  ActiveLearnerServerService_Client.hs  ActiveLearnerServerService_Iface.hs  AnnotateCommunicationService.hs  AnnotateCommunicationService_Client.hs  AnnotateCommunicationService_Iface.hs  Annotate_Consts.hs  Annotate_Types.hs  Audio_Consts.hs  Audio_Types.hs  Cluster_Consts.hs  Cluster_Types.hs  Communication_Consts.hs  Communication_Types.hs  Concrete_Consts.hs  Concrete_Types.hs  Email_Consts.hs  Email_Types.hs  Entities_Consts.hs  Entities_Types.hs  Ex_Consts.hs  Ex_Types.hs  FeedbackService.hs  FeedbackService_Client.hs  FeedbackService_Iface.hs  FetchCommunicationService.hs  FetchCommunicationService_Client.hs  FetchCommunicationService_Iface.hs  Language_Consts.hs  Language_Types.hs  Learn_Consts.hs  Learn_Types.hs  Linking_Consts.hs  Linking_Types.hs  Metadata_Consts.hs  (+39 more)
src/Data/: Concrete.hs
src/Data/Concrete/: Parsers.hs  Prelude.hs  Services.hs  Types.hs  Utils.hs
src/Data/Concrete/Parsers/: CONLL.hs  CSV.hs  Email.hs  HTML.hs  JSON.hs  Line.hs  PTB.hs  RFC2822.lhs  Types.hs  Utils.hs  XML.hs
src/Data/Concrete/Parsers/CONLL/: Attoparsec.hs
src/Data/Concrete/Parsers/JSON/: Attoparsec.hs  Megaparsec.hs
src/Data/Concrete/Services/: ActiveLearnerClientService.hs  ActiveLearnerClientService_Client.hs  ActiveLearnerClientService_Iface.hs  ActiveLearnerServerService.hs  ActiveLearnerServerService_Client.hs  ActiveLearnerServerService_Iface.hs  Annotate.hs  AnnotateCommunicationService.hs  AnnotateCommunicationService_Client.hs  AnnotateCommunicationService_Iface.hs  FeedbackService.hs  FeedbackService_Client.hs  FeedbackService_Iface.hs  Fetch.hs  FetchCommunicationService.hs  FetchCommunicationService_Client.hs  FetchCommunicationService_Iface.hs  ResultsServerService.hs  ResultsServerService_Client.hs  ResultsServerService_Iface.hs  SearchProxyService.hs  SearchProxyService_Client.hs  SearchProxyService_Iface.hs  SearchService.hs  SearchService_Client.hs  SearchService_Iface.hs  Service.hs  Service_Client.hs  Service_Iface.hs  Store.hs  StoreCommunicationService.hs  StoreCommunicationService_Client.hs  StoreCommunicationService_Iface.hs  SummarizationService.hs  SummarizationService_Client.hs  SummarizationService_Iface.hs
tests/: TestIngesters.hs  TestSerialization.hs  UnitTests.hs
utils/: ApplyAnnotators.hs  BuildGraphs.hs  FetchService.hs  IngestCommunications.hs  IngestJson.hs  InspectCommunication.hs  InspectCommunications.hs  MakeThreads.hs  StoreService.hs
