name:                concrete-haskell
version:             0.1.0.6
synopsis:            Library for the Concrete data format.
description:         Library for the Concrete data format.
homepage:            https://github.com/hltcoe
license:             GPL
license-file:        LICENSE
author:              Thomas Lippincott
maintainer:          tom@cs.jhu.edu
copyright:           2016
category:            Data
build-type:          Simple
cabal-version:       >=1.10
             
library
  hs-source-dirs:     src
  exposed-modules:    Data.Concrete, Data.Concrete.Utils, Data.Concrete.Parsers.JSON, Data.Concrete.Parsers.JSON.Megaparsec, Data.Concrete.Parsers.JSON.Attoparsec
  other-modules:      Communication_Types
                    , Access_Types
                    , Annotate_Types
                    , Audio_Types
                    , Cluster_Types
                    , Communication_Types
                    , Concrete_Types
                    , Email_Types
                    , Entities_Types
                    , Ex_Types
                    , Language_Types
                    , Learn_Types
                    , Linking_Types
                    , Metadata_Types
                    , Nitf_Types
                    , Results_Types
                    , Search_Types
                    , Services_Types
                    , Situations_Types
                    , Spans_Types
                    , Structure_Types
                    , Summarization_Types
                    , Twitter_Types
                    , Uuid_Types
                    , SearchService
                    , SearchService_Client
                    , SearchService_Iface
                    , Service
                    , Service_Client
                    , Service_Iface
                    , AnnotateCommunicationService
                    , AnnotateCommunicationService_Client
                    , AnnotateCommunicationService_Iface
                    , FetchCommunicationService
                    , FetchCommunicationService_Client
                    , FetchCommunicationService_Iface
                    , StoreCommunicationService
                    , StoreCommunicationService_Client
                    , StoreCommunicationService_Iface

-- ResultsServer, ActiveLearnerClient, ActiveLearnerServer, Feedback, Summarization, SearchProxy
                                        
                                        
                     
  build-depends:       base >= 4.6 && < 5
                     , thrift == 0.10.0
                     , text
                     , unordered-containers
                     , QuickCheck
                     , vector
                     , hashable
                     , bytestring
                     , containers
                     , uuid
                     , tar
                     , zlib
                     , time
                     , filepath
                     , process
                     , directory
                     , attoparsec
                     , megaparsec
                     , scientific
  default-language:    Haskell2010
  default-extensions:  DuplicateRecordFields, RecordWildCards
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-p -with-rtsopts=-N
--  ghc-options: -prof -fprof-auto -O2 -fdicts-cheap -funbox-strict-fields -fmax-simplifier-iterations=10
--  ghc-options: -O2 -fdicts-cheap -funbox-strict-fields -fmax-simplifier-iterations=10
  
executable ingest_json
  main-is:        IngestJson.hs
  hs-source-dirs: utils
  build-depends:  base >= 4.6 && < 5
                , megaparsec
                , bytestring
                , text
                , concrete-haskell
                , optparse-applicative
                , containers
                , filepath
                , process
                , directory
                , vector
                , mtl
                , zlib
  default-language:    Haskell2010
  default-extensions:  DuplicateRecordFields


executable inspect_communications
  main-is:        InspectCommunication.hs
  hs-source-dirs: utils
  build-depends:  base >= 4.6 && < 5
                , bytestring
                , text
                , concrete-haskell
                , optparse-applicative
                , containers
                , filepath
                , process
                , directory
                , vector
                , zlib                                
  default-language:    Haskell2010
  default-extensions:  DuplicateRecordFields
